[gd_scene load_steps=6 format=3 uid="uid://c061ri6pfa1ck"]

[ext_resource type="Shader" path="res://branches/gui/sidebar.gdshader" id="1_xeat2"]
[ext_resource type="Script" path="res://scripts/gui/Sidebar.gd" id="2_thul7"]
[ext_resource type="Shader" path="res://branches/gui/sidebar_bg.gdshader" id="3_0g5yc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_82vam"]
shader = ExtResource("1_xeat2")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rtycy"]
shader = ExtResource("3_0g5yc")

[node name="Sidebar" type="PanelContainer"]
top_level = true
visibility_layer = 3
z_index = 99
z_as_relative = false
texture_filter = 2
material = SubResource("ShaderMaterial_82vam")
layout_direction = 2
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.06
offset_bottom = 0.175999
grow_horizontal = 2
size_flags_vertical = 3
script = ExtResource("2_thul7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Padding1" type="Container" parent="VBoxContainer"]
layout_mode = 2

[node name="Panel" type="HBoxContainer" parent="VBoxContainer"]
material = SubResource("ShaderMaterial_rtycy")
layout_mode = 2
size_flags_stretch_ratio = 0.24
alignment = 1

[node name="Padding" type="Container" parent="VBoxContainer/Panel"]
layout_mode = 2

[node name="LeftSide" type="HBoxContainer" parent="VBoxContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 2

[node name="PauseBtn" type="Button" parent="VBoxContainer/Panel/LeftSide"]
layout_mode = 2
text = "PAUSE"

[node name="InstructionLbl" type="Label" parent="VBoxContainer/Panel"]
layout_mode = 2
text = "INSTRUCTION"

[node name="RightSide" type="HBoxContainer" parent="VBoxContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 10

[node name="HintBtn" type="Button" parent="VBoxContainer/Panel/RightSide"]
layout_mode = 2
text = "(hint)"

[node name="HelpBtn" type="Button" parent="VBoxContainer/Panel/RightSide"]
layout_mode = 2
text = "(?)"

[node name="Padding2" type="Container" parent="VBoxContainer/Panel"]
layout_mode = 2

[node name="Padding" type="Container" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/Panel/LeftSide/PauseBtn" to="." method="_on_pause"]
[connection signal="pressed" from="VBoxContainer/Panel/RightSide/HintBtn" to="." method="_on_hint"]
[connection signal="pressed" from="VBoxContainer/Panel/RightSide/HelpBtn" to="." method="_on_help"]
